# pdf-renamer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
llms/: extractors.py
tests/: README.md  test_extractors.py  test_integration.py  test_pdf_content.py  test_pdf_renamer.py
utils/: file_name.py  pdf_content.py
